--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap');
+
+
 .App {
   text-align: center;
 }
